@@ -17,29 +17,26 @@
 
 package com.illusivesoulworks.shulkerboxslot.platform;
 
+import com.illusivesoulworks.shulkerboxslot.AnimProgressComponent;
 import com.illusivesoulworks.shulkerboxslot.BaseShulkerBoxAccessory;
 import com.illusivesoulworks.shulkerboxslot.ShulkerBoxSlotCommonMod;
 import com.illusivesoulworks.shulkerboxslot.ShulkerBoxSlotFabricMod;
-import com.illusivesoulworks.shulkerboxslot.common.ShulkerBoxSlotPackets;
-import com.illusivesoulworks.shulkerboxslot.common.TrinketShulkerBoxComponent;
-import com.illusivesoulworks.shulkerboxslot.common.network.SPacketSyncAnimation;
+import com.illusivesoulworks.shulkerboxslot.common.network.SPayloadSyncAnimation;
 import com.illusivesoulworks.shulkerboxslot.platform.services.ICommonPlatform;
 import dev.emi.trinkets.api.SlotReference;
 import dev.emi.trinkets.api.SlotType;
+import dev.emi.trinkets.api.Trinket;
 import dev.emi.trinkets.api.TrinketInventory;
 import dev.emi.trinkets.api.TrinketsApi;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
 import java.util.concurrent.atomic.AtomicReference;
-import net.fabricmc.fabric.api.networking.v1.PacketByteBufs;
 import net.fabricmc.fabric.api.networking.v1.PlayerLookup;
 import net.fabricmc.fabric.api.networking.v1.ServerPlayNetworking;
 import net.fabricmc.loader.api.FabricLoader;
-import net.minecraft.network.FriendlyByteBuf;
+import net.minecraft.core.component.DataComponentType;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.util.Tuple;
-import net.minecraft.world.MenuProvider;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.item.ItemStack;
 import org.apache.commons.lang3.tuple.ImmutableTriple;
@@ -48,38 +45,34 @@ import org.apache.commons.lang3.tuple.Triple;
 public class FabricCommonPlatform implements ICommonPlatform {
 
   @Override
-  public Optional<Triple<ItemStack, String, Integer>> findShulkerBoxAccessory(
-      LivingEntity livingEntity) {
+  public DataComponentType<AnimProgressComponent> getAnimationComponent() {
+    return ShulkerBoxSlotFabricMod.ANIM_PROGRESS;
+  }
+
+  private static final Triple<ItemStack, String, Integer> EMPTY =
+      ImmutableTriple.of(ItemStack.EMPTY, "", 0);
+
+  @Override
+  public Triple<ItemStack, String, Integer> findShulkerBoxAccessory(LivingEntity livingEntity) {
     AtomicReference<Triple<ItemStack, String, Integer>> result = new AtomicReference<>();
+    result.set(EMPTY);
     TrinketsApi.getTrinketComponent(livingEntity).ifPresent(trinketComponent -> {
       List<Tuple<SlotReference, ItemStack>> list = trinketComponent.getEquipped(
           stack -> ShulkerBoxSlotCommonMod.isShulkerBox(stack.getItem()));
 
       if (!list.isEmpty()) {
-        Tuple<SlotReference, ItemStack> res = list.get(0);
+        Tuple<SlotReference, ItemStack> res = list.getFirst();
         SlotType slotType = res.getA().inventory().getSlotType();
         result.set(ImmutableTriple.of(res.getB(), slotType.getGroup() + ":" + slotType.getName(),
             res.getA().index()));
       }
     });
-    return Optional.ofNullable(result.get());
+    return result.get();
   }
 
   @Override
-  public Optional<BaseShulkerBoxAccessory> getShulkerBoxAccessory(ItemStack stack) {
-    TrinketShulkerBoxComponent component =
-        ShulkerBoxSlotFabricMod.getShulkerBoxComponent(stack).orElse(null);
-
-    if (component != null) {
-      return Optional.of(component.getShulkerBoxAccessory());
-    }
-    return Optional.empty();
-  }
-
-  @Override
-  public Optional<BaseShulkerBoxAccessory> getShulkerBoxAccessory(LivingEntity livingEntity,
-                                                                  String id, int index) {
-    AtomicReference<BaseShulkerBoxAccessory> result = new AtomicReference<>();
+  public ItemStack getShulkerBoxAccessory(LivingEntity livingEntity, String id, int index) {
+    ItemStack[] result = new ItemStack[] {ItemStack.EMPTY};
     String[] ids = id.split(":");
 
     if (ids.length == 2) {
@@ -92,27 +85,22 @@ public class FabricCommonPlatform implements ICommonPlatform {
 
           if (index < slotInv.getContainerSize()) {
             ItemStack stack = slotInv.getItem(index);
-            ShulkerBoxSlotFabricMod.getShulkerBoxComponent(stack)
-                .ifPresent(component -> result.set(component.getShulkerBoxAccessory()));
+            Trinket trinket = TrinketsApi.getTrinket(stack.getItem());
+
+            if (trinket instanceof BaseShulkerBoxAccessory) {
+              result[0] = stack;
+            }
           }
         }
       });
     }
-    return Optional.ofNullable(result.get());
+    return result[0];
   }
 
   @Override
-  public void openScreen(MenuProvider container, ServerPlayer player) {
-    player.openMenu(container);
-  }
-
-  @Override
-  public void sendSyncPacket(SPacketSyncAnimation packet, ServerPlayer player) {
-    FriendlyByteBuf buf = PacketByteBufs.create();
-    SPacketSyncAnimation.encode(packet, buf);
-    ServerPlayNetworking.send(player, ShulkerBoxSlotPackets.SYNC_SHULKER_BOX, buf);
-    PlayerLookup.tracking(player).forEach(
-        player1 -> ServerPlayNetworking.send(player1, ShulkerBoxSlotPackets.SYNC_SHULKER_BOX, buf));
+  public void sendSyncPacket(SPayloadSyncAnimation packet, ServerPlayer player) {
+    ServerPlayNetworking.send(player, packet);
+    PlayerLookup.tracking(player).forEach(player1 -> ServerPlayNetworking.send(player1, packet));
   }
 
   private static Boolean isElytraSlotLoaded = null;
